<resources>
    <string name="app_name">HomeTask_2</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_dot">C</string>
    <string name="key_sum">+</string>
    <string name="key_subtraction">-</string>
    <string name="equally">=</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
    <string name="key_0">0</string>
    <string name="key_percent">%</string>
    <string name="clic_count">%d</string>
    <string name="first_zero">%d</string>


</resources>